--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 .card-group {
     margin: 50px;
     margin-bottom: 100px;
+    padding: 20px;
 }
 /* 
 
@@ -18,3 +19,4 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
